# conflicts

./: .gitattributes  .gitignore  .prettierignore  CONTRIBUTING.md  LICENSE  MergeScope_Especificacao_Tecnica.md  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.base.json
.github/: CODEOWNERS
.github/workflows/: beta-release.yml  build-windows.yml  ci.yml  prepare-next-version.yml  release.yml
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: main.tsx
apps/desktop/src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: cli.rs  commands.rs  doctor.rs  encoding.rs  files.rs  git.rs  logging.rs  main.rs  writer.rs
docs/architecture/: overview.md
docs/decisions/: adr.md
docs/integrations/: fork.md  git.md  gitkraken.md
fixtures/delete-modify/: base.txt  current.txt  merged.expected.txt  merged.initial.txt  metadata.json
fixtures/encodings/: base.txt  current.txt  incoming.txt  merged.expected.txt  merged.initial.txt  metadata.json
fixtures/independent-changes/: base.txt  current.txt  incoming.txt  merged.expected.txt  metadata.json
fixtures/moved-code/: base.txt  current.txt  incoming.txt  merged.expected.txt  merged.initial.txt  metadata.json
fixtures/overlapping-changes/: base.txt  current.txt  incoming.txt  merged.expected.txt  merged.initial.txt  metadata.json
scripts/: bump-minor-version.mjs  gen-icon.mjs  setup-context-menu.ps1  setup-git-mergetool.ps1
(+45 files in other folders)
