[package]
name = "mergescope"
version = "0.1.0"
description = "MergeScope — visual Git merge conflict resolution against the common ancestor"
authors = ["MergeScope"]
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Console", "Win32_Foundation"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
